--- a/posts.htm
+++ b/posts.htm
@@ -21,11 +21,11 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav">
                     <li class="nav-item px-2">
-                        <a href="index.htm" class="nav-link active">Dashboard</a>
+                        <a href="index.htm" class="nav-link">Dashboard</a>
                     </li>
 
                     <li class="nav-item px-2">
-                        <a href="posts.htm" class="nav-link">Posts</a>
+                        <a href="posts.htm" class="nav-link active">Posts</a>
                     </li>
                     <li class="nav-item px-2">
                         <a href="categories.htm" class="nav-link">Categories</a>
@@ -70,7 +70,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h1><i class="fas fa-cog"></i>  Dashboard</h1>
+                    <h1><i class="fas fa-pencil-alt"></i>  Posts</h1>
                 </div>
             </div>
         </div>
@@ -78,28 +78,18 @@
 
 
 
-    <!-- ACTION -->
+    <!-- SEARCH -->
 
-    <section id="actions" class="py-4 mb-4 bg-light">
+    <section id="search" class="py-4 mb-4 bg-light">
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
-                    <a href="" class="btn btn-primary btn-block" data-toggle="modal" data-target="#addPostModal">
-                        <i class="fas fa-plus"></i>Add Post
-                    </a>
-                </div>
-
-                <div class="col-md-3">
-                    <a href="" class="btn btn-success btn-block" data-toggle="modal" data-target="#addCategoryModal">
-                        <i class="fas fa-plus"></i>Add Category
-                    </a>
-                </div>
-                
-
-                <div class="col-md-3">
-                    <a href="" class="btn btn-warning btn-block" data-toggle="modal" data-target="#addUserModal">
-                        <i class="fas fa-plus"></i>Add User
-                    </a>
+                <div class="col-md-6 ml-auto">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search Post....">
+                        <div class="input-group-append">
+                            <button class="btn btn-primary">Search</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -109,7 +99,7 @@
     <section id="posts">
         <div class="container">
             <div class="row">
-                <div class="col-md-9">
+                <div class="col">
                     <div class="card">
                       <div class="card-header">
                           <h4>Latest Posts</h4>
@@ -132,7 +122,7 @@
                                   <td>Web Development</td>
                                   <td>May 10 2018</td>
                                   <td>
-                                      <a href="details.htm" class="btn btn-secondary">
+                                      <a href="datails.htm" class="btn btn-secondary">
                                           <i class="fas fa-angle-double-right"></i>Details
                                       </a>
                                   </td>
@@ -144,7 +134,7 @@
                                 <td>Tech Gargets</td>
                                 <td>May 10 2018</td>
                                 <td>
-                                    <a href="details.htm" class="btn btn-secondary">
+                                    <a href="datails.htm" class="btn btn-secondary">
                                         <i class="fas fa-angle-double-right"></i>Details
                                     </a>
                                 </td>
@@ -156,7 +146,7 @@
                                 <td>Web Development</td>
                                 <td>May 13 2018</td>
                                 <td>
-                                    <a href="details.htm" class="btn btn-secondary">
+                                    <a href="datails.htm" class="btn btn-secondary">
                                         <i class="fas fa-angle-double-right"></i>Details
                                     </a>
                                 </td>
@@ -168,7 +158,7 @@
                                 <td>Bussnes</td>
                                 <td>May 15 2018</td>
                                 <td>
-                                    <a href="details.htm" class="btn btn-secondary">
+                                    <a href="datails.htm" class="btn btn-secondary">
                                         <i class="fas fa-angle-double-right"></i>Details
                                     </a>
                                 </td>
@@ -180,7 +170,7 @@
                                 <td>Web Development</td>
                                 <td>May 17 2018</td>
                                 <td>
-                                    <a href="details.htm" class="btn btn-secondary">
+                                    <a href="datails.htm" class="btn btn-secondary">
                                         <i class="fas fa-angle-double-right"></i>Details
                                     </a>
                                 </td>
@@ -192,48 +182,41 @@
                                 <td>Health & wellness</td>
                                 <td>May 18 2018</td>
                                 <td>
-                                    <a href="details.htm" class="btn btn-secondary">
+                                    <a href="datails.htm" class="btn btn-secondary">
                                         <i class="fas fa-angle-double-right"></i>Details
                                     </a>
                                 </td>
                             </tr>
                           </tbody>
                       </table>
+
+
+                      <!-- PAGINATION -->
+                      <nav class="ml-4">
+                            <ul class="pagination">
+                                <li class="page-item disabled">
+                                    <a href="" class="page-link"> Previuos</a>
+                                </li>
+
+                                <li class="page-item active">
+                                    <a href="" class="page-link"> 1</a>
+                                </li>
+
+                                <li class="page-item">
+                                    <a href="" class="page-link"> 2</a>
+                                </li>
+                                <li class="page-item">
+                                    <a href="" class="page-link"> 3</a>
+                                </li>
+                                <li class="page-item">
+                                    <a href="" class="page-link">Next</a>
+                                </li>
+                            </ul>
+                      </nav>
                     </div>
                 </div>
 
-                <div class="col-md-3">
-                    <div class="card text-center bg-primary text-white mb-3">
-                        <div class="card-body">
-                            <h3>Posts</h3>
-                            <h4 class="display-4">
-                                <i class="fas fa-pencil-alt"></i> 6
-                            </h4>
-                            <a href="posts.htm" class="btn btn-outline-light btn-sm">View</a>
-                        </div>
-                    </div>
-
-                    <div class="card text-center bg-success text-white mb-3">
-                        <div class="card-body">
-                            <h3>Categories</h3>
-                            <h4 class="display-4">
-                                <i class="fas fa-folder"></i> 4
-                            </h4>
-                            <a href="categories.htm" class="btn btn-outline-light btn-sm">View</a>
-                        </div>
-                    </div>
-
-
-                    <div class="card text-center bg-warning text-white mb-3">
-                        <div class="card-body">
-                            <h3>Users</h3>
-                            <h4 class="display-4">
-                                <i class="fas fa-users"></i> 6
-                            </h4>
-                            <a href="users.htm" class="btn btn-outline-light btn-sm">View</a>
-                        </div>
-                    </div>
-                </div>
+              
             </div>
         </div>
     </section>
@@ -398,7 +381,7 @@
 <script>
     //Get the current year for the copyright
     $('#year').text(new Date().getFullYear());
-    CKEDITOR.replace( 'editor1' ); 
+
 </script>
 </body>
 </html>
